--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An introduction to JS testing",
   "main": "app.js",
   "scripts": {
-    "start": "webpack app.js",
+    "start": "webpack app.js --mode development --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
